--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Landing Pages</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
